# covariant

./: CLAUDE.md  Cargo.toml  README.md
crates/covariant-cli/: Cargo.toml
crates/covariant-cli/src/: main.rs
crates/covariant-debug/: Cargo.toml
crates/covariant-debug/src/: lib.rs  stepper.rs  trace.rs  viewer.rs
crates/covariant-debug/tests/: debug_integration.rs
crates/covariant-eval/: Cargo.toml
crates/covariant-eval/src/: builtins.rs  env.rs  error.rs  eval.rs  lib.rs  types.rs  units.rs  value.rs
crates/covariant-eval/tests/: eval_integration.rs
crates/covariant-export/: Cargo.toml
crates/covariant-export/src/: error.rs  lib.rs  quality.rs  stl.rs  thread.rs  validate.rs
crates/covariant-export/tests/: export_integration.rs
crates/covariant-geom/: Cargo.toml
crates/covariant-geom/src/: boolean.rs  error.rs  kernel.rs  lib.rs  primitives.rs  sweep.rs  tessellate.rs  transform.rs  truck_kernel.rs  types.rs
crates/covariant-geom/tests/: geom_ops.rs
crates/covariant-ir/: Cargo.toml
crates/covariant-ir/src/: dag.rs  error.rs  lib.rs  lower.rs  node.rs
crates/covariant-ir/tests/: lower_examples.rs
crates/covariant-syntax/: Cargo.toml
crates/covariant-syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/covariant-syntax/tests/: parse_examples.rs
crates/covariant-thread/: Cargo.toml
crates/covariant-thread/src/: dimensions.rs  geometry.rs  iso_metric.rs  lib.rs  spec.rs  standard.rs  uts.rs
crates/covariant-thread/tests/: thread_api.rs
docs/: ARCHITECTURE.md  README.md  ROADMAP.md  SPEC.md  TESTING.md
examples/: bracket.cov  data_types.cov  functions.cov  math.cov  mounting_plate.cov
