[workspace]
members = [
    "crates/covariant-cli",
    "crates/covariant-debug",
    "crates/covariant-eval",
    "crates/covariant-export",
    "crates/covariant-geom",
    "crates/covariant-ir",
    "crates/covariant-syntax",
    "crates/covariant-thread",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
