[package]
name = "covariant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the COVARIANT language"

[[bin]]
name = "covariant"
path = "src/main.rs"

[dependencies]
covariant-syntax = { path = "../covariant-syntax" }
covariant-ir = { path = "../covariant-ir" }
covariant-eval = { path = "../covariant-eval" }
covariant-geom = { path = "../covariant-geom" }
clap = { version = "4", features = ["derive"] }
